final progress bar adjustment (to fix the progress bar clipping slightly)

--- a/CSS/PlaylistCreator.css
+++ b/CSS/PlaylistCreator.css
@@ -335,24 +335,41 @@ dialog::backdrop{
     flex: 0 1 auto;
 }
 .largerSize{ max-width: 90%; }
-progress {
+
+playbar {
+    --percentage: 0%;
+    display: inline-block;
     accent-color: white;
     width: 50vw;
     height: .5em;
     border: solid #858585 1px;
     border-radius: 15px;
     appearance: none;
+    vertical-align: baseline;
+    background-image: linear-gradient(90deg, black var(--percentage), white 0%);
+}
+progress {
+    --percentage: 0%;
+    accent-color: white;
+    width: 50vw;
+    height: .5em;
+    border: solid #858585 1px;
+    border-radius: 15px;
+    -moz-appearance: progressbar;
+    -webkit-appearance: none;
+    appearance: none;
     position: relative;
     top: 50%;
-    transform: translateY(-50%);;
+    transform: translateY(-50%);
 }
 progress::-webkit-progress-bar {
-    background-color: #3b3b3b;
+    /*background-color: #3b3b3b;*/
+    background-image: linear-gradient(90deg, white var(--percentage), black var(--percentage));
     border-radius: 15px;
 }
 progress::-webkit-progress-value {
-    background-color: white;
-    border-radius: 2px;
+    background-color: transparent;
+    /*border-radius: 2px;*/
 }
 
 input[type=file]{
